# genetrail3

./: .clang-format  .gitignore  CMakeLists.txt  README  README.md  cmake_prep_run_in_build.sh
applications/: CMakeLists.txt  matrixTools.cpp  matrixTools.h
applications/compute/: CMakeLists.txt  combineReducedEnrichments.cpp  computeGroupedScores.cpp  computeNetworkFormular.cpp  computeScores.cpp  filterSCMatrix.cpp  interactive_UDS.cpp  naHandler.cpp  nod.cpp  normalityCheck.cpp  normalizeMatrix.cpp  oraGroupPreference.cpp  precomputedGroupedScores.cpp  reorderMatrix.cpp  transformMatrix.cpp  transformScores.cpp
applications/enrichment/: CMakeLists.txt  common.cpp  common.h  contingency_ora.cpp  enrichment.cpp  gsea.cpp  hotelling.cpp  htests.cpp  main.cpp  multi-threaded-ora.cpp  oneSampleHTests.cpp  ora.cpp  ora_preprocessor.cpp  weighted-gsea.cpp  wilcoxon.cpp
applications/fidepa/: CMakeLists.txt  fidepa.cpp
applications/geo/: CMakeLists.txt  common.cpp  common.h  parseGEO.cpp
applications/glasso/: CMakeLists.txt  glasso.h  main.cpp
applications/gsea/: CMakeLists.txt  main.cpp
applications/ora/: CMakeLists.txt  main.cpp
applications/regulation/: CMakeLists.txt  common.cpp  common.h  csa.cpp  microReggae.cpp  reggae.cpp  reggae_result_aggregator.cpp  regulator_effect_analysis.cpp  regulator_ora.cpp  regulator_permutation_test.cpp
applications/test/: CMakeLists.txt
applications/test/compute/: CMakeLists.txt  integration_tests_variables.sh.in  integration_tests_worker.sh  run_integration_tests.sh.in
applications/test/enrichment/: CMakeLists.txt  integration_tests_variables.sh.in  integration_tests_worker.sh
applications/test/regulation/: CMakeLists.txt  integration_tests_variables.sh.in  integration_tests_worker.sh
applications/tools/: CMakeLists.txt  category_convert.cpp  cluster_genes.cpp  datasetReading.cpp  filter_scores.cpp  mconvert.cpp
applications/wilcoxon/: CMakeLists.txt  main.cpp
bindings/: CMakeLists.txt
bindings/core/: AbstractMatrix.i  CMakeLists.txt  DenseMatrix.i  DenseMatrixSubset.i  Exception.i  Matrix.i  core.i
libraries/core/: CMakeLists.txt
libraries/core/src/: AbstractMatrix.cpp  AbstractMatrix.h  BoostGraph.h  BoostGraphParser.h  BoostGraphProcessor.cpp  BoostGraphProcessor.h  CommandLineParser.h  Dataset.h  DenseDataset.h  DenseDatasetImpl.cpp  DenseDatasetImpl.h  DenseMatrix.cpp  DenseMatrix.h  DenseMatrixReader.cpp  DenseMatrixReader.h  DenseMatrixSubset.cpp  DenseMatrixSubset.h  DenseMatrixWriter.cpp  DenseMatrixWriter.h  DenseSubset.cpp  DenseSubset.h  Exception.cpp  Exception.h  FTest.h  FiDePaRunner.cpp  FiDePaRunner.h  GeneSetEnrichmentAnalysis.h  HypergeometricTest.h  Matrix.cpp  Matrix.h  Ontology.cpp  Ontology.h  OverRepresentationAnalysis.cpp  OverRepresentationAnalysis.h  Parameter.cpp  Parameter.h  Path.cpp  Path.h  Pathfinder.cpp  Pathfinder.h  (+22 more)
libraries/core/test/: BoostGraphParser_tests.cpp  BoostGraphProcessor_tests.cpp  CMakeLists.txt  DenseMatrixReader_tests.cpp  DenseMatrixWriter_tests.cpp  DenseMatrix_tests.cpp  FiDePaRunner_tests.cpp  FishersExactTest_tests.cpp  GMTFile_tests.cpp  GeneSetEnrichmentAnalysis_tests.cpp  HTests_test.cpp  HypergeometricTest_tests.cpp  Matrix_tests.cpp  OverRepresentationAnalysis_tests.cpp  PValue_tests.cpp  ScoringFileParser_tests.cpp  Statistic_test.cpp  graph_parser_tests.cpp  graph_processor_tests.cpp  pathfinder_tests.cpp  scoring_file_parser_tests.cpp
libraries/genetrail2/: CMakeLists.txt
libraries/genetrail2/cluster/: CMakeLists.txt  METISClusterer.cpp  METISClusterer.h  NeighborhoodBuilder.cpp  NeighborhoodBuilder.h  SparseClusterer.cpp  SparseClusterer.h  files.cmake
libraries/genetrail2/core/: AbstractMatrix.cpp  AbstractMatrix.h  AndersonDarlingTest.h  BinomialTest.h  BoostGraph.h  BoostGraphParser.h  BoostGraphProcessor.cpp  BoostGraphProcessor.h  CMakeLists.txt  Category.cpp  Category.h  CategoryDatabase.cpp  CategoryDatabase.h  CategoryDatabaseFile.h  CategoryFile.h  CombineReducedEnrichments.cpp  CombineReducedEnrichments.h  CommandLineParser.cpp  CommandLineParser.h  ConfidenceInterval.h  DenseColumnSubset.cpp  DenseColumnSubset.h  DenseDataset.h  DenseMatrix.cpp  DenseMatrix.h  DenseMatrixReader.cpp  DenseMatrixReader.h  DenseMatrixSubset.cpp  DenseMatrixSubset.h  DenseMatrixWriter.cpp  DenseMatrixWriter.h  DenseRowSubset.cpp  DenseRowSubset.h  DependentShrinkageTTest.h  DependentTTest.h  Editor.h  EnrichmentAlgorithm.h  EnrichmentResult.h  EntityDatabase.cpp  EntityDatabase.h  (+112 more)
libraries/genetrail2/enrichment/: CMakeLists.txt  CommandLineInterface.cpp  CommandLineInterface.h  ContingencyEnrichmentResult.h  ContingencyMatrixParser.h  ContingencyORA.h  EnrichmentAlgorithm.cpp  EnrichmentAlgorithm.h  EnrichmentResult.h  Parameters.cpp  Parameters.h  PermutationTest.h  SetLevelStatistics.cpp  SetLevelStatistics.h  common.cpp  common.h
libraries/genetrail2/regulation/: CMakeLists.txt  CorrelationSetAnalysis.h  REGGAEAnalysis.h  RTINetwork.h  RegulationBootstrapper.h  RegulationBootstrapperMicro.h  RegulationFile.h  RegulationFileParser.h  RegulationFileWriter.h  RegulationFileWriter2.h  RegulationScoreFileReader.h  Regulator.h  RegulatorAssociationScore.h  RegulatorCategoryFileReader.cpp  RegulatorCategoryFileReader.h  RegulatorEffectAnalysis.h  RegulatorEffectResult.h  RegulatorEffectResultAggregator.cpp  RegulatorEffectResultAggregator.h  RegulatorEnrichmentResultAggregator.cpp  RegulatorEnrichmentResultAggregator.h  RegulatorGeneAssociationEnrichmentAlgorithms.h  RegulatorGeneAssociationEnrichmentAnalysis.h  RegulatorGeneAssociationEnrichmentResult.h  RegulatorImpactScore.h  RegulatorPermutationTest.h  RegulatoryImpactFactors.h  files.cmake
libraries/test/: CMakeLists.txt
libraries/test/cmake/: GeneTrail2TestExecuter.cmake
libraries/test/core/: BoostGraphProcessor_tests.cpp  CMakeLists.txt  ConfidenceInterval_tests.cpp  DenseMatrixIterator_tests.cpp  DenseMatrixReader_tests.cpp  DenseMatrixWriter_tests.cpp  DenseMatrix_tests.cpp  FiDePaRunner_tests.cpp  FishersExactTest_tests.cpp  GMTFile_tests.cpp  GeneLabelPermutationTest_tests.cpp  (+15 more)
(+180 files in other folders)
